# solar-resource-ev

./: .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  ingest-current.yml  ingest-historic.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: DATA_SUMMARY.md  PLAN.md  REPORT_NOTES.md
pipelines/: benchmark_dayahead.py  benchmark_multicity.py  benchmark_temp.py  data_efficiency.py  figures_climatology.py  figures_ghi.py  figures_grid_heatmap.py  figures_part_a.py  figures_part_b_cities.py  figures_part_b_sites.py  figures_seasonal_sites.py
reports/: REPORT.md  benchmark_dayahead_karachi.csv  benchmark_karachi.csv  benchmark_multicity.csv  benchmark_temp_karachi.csv  city_summary.csv  climatology_daily_karachi.csv  climatology_monthly_karachi.csv  data_efficiency_karachi.csv  first draft.md  karachi_grid_ghi.csv  report.md  seasonal_site_suitability_karachi.csv  second draft.md  site_suitability_karachi.csv  temp_derating_karachi.csv
src/solarpredict/: __init__.py  cli.py
src/solarpredict/config/: __init__.py  settings.py  sites.py
src/solarpredict/data/: __init__.py  ingest.py  openmeteo.py  repository.py
src/solarpredict/evaluation/: __init__.py  experiments.py  harness.py  metrics.py  split.py
src/solarpredict/features/: __init__.py  clearsky.py  prepare.py  tabular.py
src/solarpredict/models/: __init__.py  base.py  baselines.py  classical.py  dl.py  foundation.py  registry.py
src/solarpredict/siting/: __init__.py  cities.py  climatology.py  seasonal.py  selection.py  suitability.py
src/solarpredict/solar/: __init__.py  power.py
src/solarpredict/viz/: __init__.py  figures.py  geo.py
tests/: test_cities.py  test_classical.py  test_data.py  test_dl.py  test_experiments.py  test_features.py  test_foundation.py  test_harness.py  test_metrics.py  test_registry.py  test_selection.py  test_solar_siting.py  test_viz.py
